--- a/package.json
+++ b/package.json
@@ -2,27 +2,11 @@
   "name": "firebase-login",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -35,5 +19,39 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@react-native-community/datetimepicker": "^4.0.0",
+    "@react-native-picker/picker": "^2.11.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^4.1.0",
+    "firebase": "^12.1.0",
+    "lucide-react": "^0.539.0",
+    "lucide-react-native": "^0.539.0",
+    "ngeohash": "^0.6.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-native": "^0.81.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-maps": "^1.25.3",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.1",
+    "react-native-webview": "^13.16.0",
+    "react-router-dom": "^7.8.2",
+    "react-scripts": "^5.0.1",
+    "recharts": "^3.1.2",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@types/recharts": "^1.8.29",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
+    "typescript": "^4.9.5"
   }
 }
