--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^19.1.1",
     "react-native": "^0.81.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-image-slider-banner": "^1.0.3",
     "react-native-maps": "^1.25.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.1",
@@ -47,11 +48,21 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/recharts": "^1.8.29",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
-    "typescript": "^4.9.5"
+    "babel-loader": "^10.0.0",
+    "source-map-loader": "^5.0.0",
+    "typescript": "^4.9.5",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
